# storage/api-docs/api-docs.json
@@ -10,6 +10,100 @@
         "version": "1.0.0"
     },
     "paths": {
+        "/api/v1/transfer": {
+            "post": {
+                "tags": [
+                    "Transaction"
+                ],
+                "summary": "Realiza uma transação entre clientes",
+                "operationId": "makeTransfer",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "payer",
+                                    "payee",
+                                    "value"
+                                ],
+                                "properties": {
+                                    "payer": {
+                                        "type": "string",
+                                        "format": "uuid",
+                                        "example": "9f87526a-f5fb-45ec-b022-c89203c6e113"
+                                    },
+                                    "payee": {
+                                        "type": "string",
+                                        "format": "uuid",
+                                        "example": "efb9f3a3-b8d1-4389-9bd6-6cef92edfc6b"
+                                    },
+                                    "value": {
+                                        "type": "number",
+                                        "format": "float",
+                                        "example": 10
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Transfer completed successfully",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Transfer send successfully"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized transfer attempt",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "This payer is not authorized to perform this transfer."
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "422": {
+                        "description": "Validation error",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "The given data was invalid."
+                                        },
+                                        "errors": {
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/auth/user": {
             "post": {
                 "tags": [
@@ -173,6 +267,10 @@
         }
     },
     "tags": [
+        {
+            "name": "Transaction",
+            "description": "Transaction"
+        },
         {
             "name": "User",
             "description": "User"
